# RaspBioloid-MoPi-filters

./: CMakeLists.txt  package.xml
scripts/: mopi_status_filter
